--- a/products/templates/inventory.html
+++ b/products/templates/inventory.html
@@ -18,35 +18,21 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="/inventory">Inventory</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/create">create</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-              </li>
-            </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
+               
           </div>
         </div>
     </nav>
     <div class="container">
-
+    {%block content%}
     <h1>Inventory</h1>
 
 
@@ -68,7 +54,7 @@
             <tr>
               <th scope="row">{{forloop.counter}}</th>
               <td>{{ i.brand }}</td>
-              <td>{{ i.model }}</td>
+              <td><a href="details/{{i.id}}">{{ i.model }}</a></td>
               <td>{{ i.year }}</td>
               <td>${{ i.price }}</td>
               <td>{{ i.color }}</td>
@@ -77,6 +63,9 @@
               <td>
                   <a href="/delete/{{i.id}}" class="btn btn-outline-danger">Sell</a>
               </td>
+              <td>
+                <a href="/edit/{{i.id}}" class="btn btn-outline-dark">Edit</a>
+              </td>
 
             </tr>
         
@@ -84,7 +73,7 @@
         </tbody>
     </table>
     </div>
-
+    {%endblock%}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 </body>
